--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -5,6 +5,7 @@ $success: #10b981;
 $danger: #ef4444;
 $warning: #f59e0b;
 $info: #06b6d4;
+$white: #ffffff;
 
 // Couleurs des branches
 $branch-administratif: #3b82f6;
