--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -28,6 +28,7 @@ body {
 @import 'components/forms';
 @import 'components/navbar';
 @import 'components/sidebar';
+@import 'components/footer';
 
 // Layouts
 @import 'layouts/dashboard';
