add logo in app-dashboard

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -29,6 +29,7 @@ body {
 @import 'components/navbar';
 @import 'components/sidebar';
 @import 'components/footer';
+@import 'components/landing';
 
 // Layouts
 @import 'layouts/dashboard';
