--- a/resources/sass/components/_sidebar.scss
+++ b/resources/sass/components/_sidebar.scss
@@ -192,6 +192,7 @@
                 border-radius: $border-radius-sm;
                 font-size: $font-size-xs;
                 font-weight: 600;
+                color: rgba(255, 255, 255, 0.5);
             }
 
             .branch-chevron {
