--- a/resources/sass/layouts/_auth.scss
+++ b/resources/sass/layouts/_auth.scss
@@ -193,7 +193,30 @@
     0% {
         transform: translate(0, 0);
     }
+
     100% {
         transform: translate(50px, 50px);
     }
+}
+.landing-logo-c {
+    display: flex;
+    align-items:end;
+    justify-content: center;
+    gap: 1rem;
+    color: #ffffff;
+    font-size: 1.5rem;
+    font-weight: 700;
+
+
+}
+
+.landing-logo-c .logo-animation-c {
+
+    span {
+
+        color: black;
+    }
+    width: 3rem;
+    height: 3rem;
+     overflow: visible;
 }
