add 'uploadImage' in ckeditor / create a controler

--- a/resources/sass/components/_landing.scss
+++ b/resources/sass/components/_landing.scss
@@ -24,6 +24,9 @@
 }
 
 .landing-logo {
+    span {
+           color: #ffffff; 
+    }
     display: flex;
     align-items: center;
     gap: 1rem;
